# DockerfileBuilder

./: .Dockerfile.swp  Dockerfile  README.md  deploy.sh  images.txt  platforms
.github/workflows/: docker.yaml  pull.yaml
dockerfiles/ansible/microservices/: Dockerfile
dockerfiles/checkup/microservices/: Dockerfile
dockerfiles/gitkube/: README.md
dockerfiles/gitkube/manifests/: Deployment.yaml  remote.yaml
dockerfiles/gitkube/microservices/: Dockerfile  no-interactive-login.sh  pre_receive.sh  sshd_config  start_sshd.sh
dockerfiles/gproxy/manifests/: Deployment.yaml  Service.yaml  remote.yaml
dockerfiles/gproxy/microservices/: Dockerfile  start.sh
dockerfiles/kube-events/manifests/: Deployment.yaml  openai-secret.yaml  remote.yaml
dockerfiles/kube-events/microservices/: Dockerfile  ke.py
dockerfiles/webhook/microservices/: Dockerfile  hooks.json
mcp-dockerfiles/mcp-server-docker/: Dockerfile  README.md  devbox.json  pyproject.toml
mcp-dockerfiles/mcp-server-docker/src/mcp_server_docker/: __init__.py  input_schemas.py  server.py  settings.py
mcp-dockerfiles/sequentialthinking/: Dockerfile  package.json  tsconfig.json
mcp-dockerfiles/wcgw/: Dockerfile
